# sense-firmware

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  Justfile  README.md  west.yml
.github/workflows/: docs.yml  (+4 more)
cores/control/: CMakeLists.txt  Kconfig  Kconfig.gnss  README.md  debug.conf  prj.conf  rtt.conf  sample.yaml
cores/control/boards/: nrf9161dk_nrf9161.overlay
cores/control/src/: gnss.c  gnss.h  main.c  sensors.c  sensors.h  sensors_cmds.c  state.c  state.h
cores/control/src/datapoint/: CMakeLists.txt  datapoint.c  datapoint_helpers.c  datapoint_helpers.h  datapoint_queue.c  datapoint_queue.h
cores/control/src/remote_commands/: CMakeLists.txt  remote_commands.c  remote_commands.h
cores/control/src/sd_card/: CMakeLists.txt  Kconfig  sd_card.c  sd_card.h
cores/control/src/sensors/: CMakeLists.txt  Kconfig  sensors.c  sensors.h
cores/control/src/sensors/adc/: CMakeLists.txt  Kconfig  adcs.c  adcs.h
cores/control/src/sensors/gnss/: CMakeLists.txt  Kconfig  gnss.c  gnss.h
cores/control/src/sensors/imu/: CMakeLists.txt  Kconfig  imu.c  imu.h  lis3mdl.c  lsm6dso.c
cores/control/src/sensors/temp_hum/: CMakeLists.txt  Kconfig  sht4x.c  temp_hum.h
cores/interface/: CMakeLists.txt  Kconfig  VERSION  debug.conf  prj.conf  rtt.conf  sample.yaml
cores/interface/boards/: nrf5340dk_nrf5340_cpuapp.overlay
cores/interface/src/: main.c
cores/interface/src/sdi12/: CMakeLists.txt  sdi12.c  sdi12_cmds.c  sdi12_queue.c  sdi12_queue.h
doc/: Doxyfile  Makefile  conf.py  make.bat
lib/: CMakeLists.txt  Kconfig
tests/: README.md
zephyr/: module.yml
(+106 files in other folders)
